--- a/frontend/src/app/views/user/user-maps/camp-add/camp-add.component.css
+++ b/frontend/src/app/views/user/user-maps/camp-add/camp-add.component.css
@@ -110,8 +110,36 @@ agm-map {
   color: #EEEEEE;
 }
 
-.btn-danger {
+.btn-secondary {
   margin-left: 10px;
+}
+
+
+::ng-deep .mat-form-field {
+  background-color: transparent;
+  border-color: white;
+}
+
+::ng-deep .mat-form-field-label {
+  /*change color of label*/
+  color: white !important;
+}
+
+::ng-deep label.mat-input-placeholder {
+  /*change color of label*/
+  color: white !important;
+}
+
+
+
+::ng-deep.mat-form-field-underline {
+  /*change color of underline*/
+  background-color: white !important;
+}
+
+::ng-deep.mat-form-field-ripple {
+  /*change color of underline when focused*/
+  background-color: green !important;
 }
 
 
