--- a/frontend/src/app/views/user/user-maps/camp-details/camp-details.component.html
+++ b/frontend/src/app/views/user/user-maps/camp-details/camp-details.component.html
@@ -1,10 +1,9 @@
-
 <section class="contact-us">
   <div class="container">
     <div class="row">
       <div class="col-md-7">
         <div class="section-title">
-          <h2>Add your spot</h2>
+          <h2>{{campSpot.name}}</h2>
         </div>
       </div>
     </div>
@@ -12,38 +11,59 @@
       <div class="col-lg-7">
         <form action="/" class="mb-4 mb-lg-0">
           <div class="form-row">
-            <div class="col-md-6 form-group">
-              <input type="text" name="name" class="form-control" id="name" [(ngModel)]="campSpot.name"  placeholder="Spot Name" />
+          </div>
+          <div class="form-group">
+            <label class="form-label">Category: </label>
+            <label class="label-output">{{campSpot.category}}</label>
+          </div>
+          <div class="form-group">
+            <label class="form-label">Address: </label>
+            <label class="label-output">{{campSpot.address}}</label>
+          </div>
+          <div class="form-group">
+            <label class="form-label">Global rate: </label>
+            <label class="label-output">{{campSpot.rate}} <span class="rating">⭐</span></label>
+          </div>
+          <div class="Skills">
+            <label class="form-label rate-label">Your Rate: </label>
+            <div class="rating">
+              <input type="radio" name="html" value="5"
+                     (change)="onItemChange($event)">
+              <input type="radio" name="html" value="4.5"
+                     (change)="onItemChange($event)">
+              <input type="radio" name="html" value="4"
+                     (change)="onItemChange($event)">
+              <input type="radio" name="html" value="3.5"
+                     (change)="onItemChange($event)">
+              <input type="radio" name="html" value="3"
+                     (change)="onItemChange($event)">
+              <input type="radio" name="html" value="2.5"
+                     (change)="onItemChange($event)">
+              <input type="radio" name="html" value="2"
+                     (change)="onItemChange($event)">
+              <input type="radio" name="html" value="1.5"
+                     (change)="onItemChange($event)">
+              <input type="radio" name="html" value="1"
+                     (change)="onItemChange($event)">
+              <input type="radio" name="html" value="0.5"
+                     (change)="onItemChange($event)">
             </div>
-            <div class="col-md-6 form-group">
-              <input type="text" class="form-control" name="category" id="category" [(ngModel)]="campSpot.category"  placeholder="Camp spot category" />
-            </div>
           </div>
-          <div class="form-group">
-            <input type="text" class="form-control" name="address" [(ngModel)]="campSpot.address"  id="address" placeholder="Address" />
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="rate" name="rate" [(ngModel)]="campSpot.rate" required/>
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Latitude" [(ngModel)]="camp_lat" name="camp_latitude" disabled/>
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Longitude" [(ngModel)]="camp_lng" name="camp_longitude" disabled/>
-          </div>
-          <button (click)="update()" type="button" class="btn btn-light">Update</button>
-          <button (click)="delete()" type="button" class="btn btn-light">Delete</button>
+
+          <button (click)="update()" type="button" class="btn btn-warning">Submit</button>
         </form>
       </div>
 
       <div class="col-lg-5">
         <agm-map
-          [latitude]="lat"
-          [longitude]="lng"
+          [latitude]="campSpot.position.lat"
+          [longitude]="campSpot.position.lng"
           [zoom]="zoom"
           [disableDefaultUI]="false"
           (mapReady)="mapClicked($event)">
-          <agm-marker>
+          <agm-marker
+            [latitude]="campSpot.position.lat"
+            [longitude]="campSpot.position.lng">
           </agm-marker>
         </agm-map>
       </div>
