--- a/frontend/src/app/views/admin/admin-users/user-details/user-details.component.html
+++ b/frontend/src/app/views/admin/admin-users/user-details/user-details.component.html
@@ -28,60 +28,50 @@
                                     <div class="col-md-6"><input type="text" class="form-control" placeholder="Email" value="{{user.Email}}"></div>
                                     <div class="col-md-6"><input type="text" class="form-control"  placeholder="Bio" value="{{user.Bio}}"></div>
                                 </div> -->
+                                <form #f="ngForm">
+                                    <div class="row mt-4">
+                                        <div class="col-md-3">
+                                            <label >Choisir une décison:</label>
+                                        
+                                            <select name="isValidated" #isValidated="ngModel" ngModel>
+                                                <option value= true> Compte vérifié</option>
+                                                <option value=false> Compte non vérifié</option>
+                                            </select>
+                                        </div>
                                         <div class="row mt-4">
                                             <div class="col-md-3">
+                                                <label >Choisir une décison:</label>
 
-
-
-                                                <label for="item">Choisir une décison:</label>
-
-                                                <select name="item" id="item">
-                                                    <option value=" Compte vérifié"> Compte vérifié</option>
-                                                    <option value=" Compte nom vérifié"> Compte non vérifié</option>
+                                                <select name="isAdmin" #isAdmin="ngModel" ngModel>
+                                                    <option value=true> Admin</option>
+                                                    <option value=false> Utilisateur simple</option>
                                                 </select>
-
-
-
                                             </div>
-
-
-                                            <div class="row mt-4">
-                                                <div class="col-md-3">
-
-
-
-                                                    <label for="item">Choisir une décison:</label>
-
-                                                    <select name="item" id="item">
-                                                        <option value=" Admin"> Admin</option>
-                                                        <option value=" Utilisateur simple"> Utilisateur simple</option>
-                                                    </select>
-
-
-
-                                                </div>
-                                            </div>
-
-                                            <div class="row mt-4">
-                                                <div class="col-md-3">
-
-
-
-                                                    <label for="item">Choisir une décison:</label>
-
-                                                    <select name="item" id="item">
-                                                        <option value=" Visiteur "> Visiteur</option>
-                                                        <option value=" Guide"> Guide</option>
-                                                        <option value=" Professionnel"> Professionnel</option>
-                                                    </select>
-
-
-
-                                                </div>
-                                            </div>
-
-
                                         </div>
+                                        <div class="row mt-4">
+                                            <div class="col-md-3">
+                                                <label >Choisir une décison:</label>
+
+                                                <select name="type" #type="ngModel" ngModel>
+                                                    <option value=" Visiteur "> Visiteur</option>
+                                                    <option value=" Guide"> Guide</option>
+                                                    <option value=" Professionnel"> Professionnel</option>
+                                                </select>
+                                                <!-- <input type="hidden"  name="Password" value="{{user.Password}}" #Password="ngModel"  ngModel /> -->
+                                                   <input type="hidden"  name="Password" [(ngModel)]="user.Password"/>
+                                                <input type="hidden"   name="Nom" [(ngModel)]="user.Nom" />
+                                                <input type="hidden"  name="Prenom" [(ngModel)]="user.Prenom" />
+                                                <input type="hidden"  name="Email" [(ngModel)]="user.Email"/>
+                                                <input type="hidden"  name="Age" [(ngModel)]="user.Age"/>
+                                                <input type="hidden"  name="Bio" [(ngModel)]="user.Bio"/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                                        <button type="button" class="btn btn-primary btn-lg" (click)="ValideUser(f.value)">Mettre à jour</button>
+                                      </div>
+
+                                </form>   
 
                                     </div>
                                 </div>
