--- a/frontend/src/app/views/user/user/login/login.component.html
+++ b/frontend/src/app/views/user/user/login/login.component.html
@@ -22,7 +22,7 @@
                   <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                   <div class="form-outline flex-fill mb-0">
                     <!--              <label class="form-label" for="form3Example3c">Mot de passe</label>-->
-                    <input type="text" id="form3Example3c" class="form-control" name="Password" placeholder="Password" #Password="ngModel"  ngModel/>
+                    <input type="password" id="form3Example3c" class="form-control" name="Password" placeholder="Password" #Password="ngModel"  ngModel/>
                   </div>
                 </div>
   
